# Viper

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README  README.md  go  viper
common/: CMakeLists.txt
common/include/common/: command_line.h  console.h  emit.h  filesystem.h  format.h  index.h  memory_buffer.h  streams.h  union.h  utf-8.h  utility.h
common/include/common/containers/: hashtable.h  store.h
common/include/common/tests/: filesystem_tests.h  memory_buffer_tests.h
common/src/: command_line.cc  emit.cc  filesystem.cc  memory_buffer.cc  utf-8.cc
common/src/tests/: filesystem_path.cc  memory_buffer_tests.cc
tests/: complex_real.viper  large.viper  point.viper  simple.viper  symbols.viper
tests/lex/: identifiers.viper  invalid.viper  keywords.viper  numbers.viper  symbols.viper
toolchain/: CMakeLists.txt  README  main.cc
toolchain/base/: CMakeLists.txt
toolchain/base/include/: token.h
toolchain/base/include/base/: canonical_values.h  compilation_unit.h  int.h  log.h  real.h  shared_values.h  string_literal_store.h
toolchain/base/src/: token.cc
toolchain/diagnostics/: CMakeLists.txt
toolchain/diagnostics/include/diagnostics/: consumer.h  diagnostic.h  emitter.h  file_emitter.h  kinds.h  location.h  no_location_emitter.h
toolchain/diagnostics/src/: level.cc  stream_consumer.cc
toolchain/driver/: CMakeLists.txt
toolchain/driver/include/: compilation_unit.h  driver.h  driver_subcommand.h  lex_subcommand.h  parse_subcommand.h  test_subcommand.h
toolchain/driver/src/: compilation_unit.cc  driver.cc  driver_subcommand.cc  lex_subcommand.cc  parse_subcommand.cc  test_subcommand.cc
toolchain/lex/: CMakeLists.txt
toolchain/lex/include/lex/: characters.h  dispatch.h  lex.h  lexer.h  numeric.h  token_info.h  token_kind.h  token_kinds.h  tokenized_buffer.h  tokens.def  tokens.h
toolchain/lex/include/lex/tests/: lex_tests.h
toolchain/lex/src/: lex.cc  numeric.cc  tokenized_buffer.cc
toolchain/lex/src/tests/: lex_tests.cc
toolchain/parse/: CMakeLists.txt
toolchain/parse/include/parse/: node.def  node.h  node_kind.h  parse.h  tree.h
toolchain/parse/src/: parse.cc
toolchain/source/: CMakeLists.txt
toolchain/source/include/source/: source_buffer.h
toolchain/source/src/: source_buffer.cc
toolchain/testing/: CMakeLists.txt
toolchain/testing/include/testing/: manager.h  test.h
toolchain/testing/src/: manager.cc
